Add TypeScript configuration

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/hoangleanhtu/loopback4-spring.git"
   },
-  "author": "",
+  "author": "hoangleanhtu@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hoangleanhtu/loopback4-spring/issues"
