Add UserService and 2 repository for test

--- a/example/package.json
+++ b/example/package.json
@@ -54,7 +54,8 @@
     "@loopback/repository": "^1.5.1",
     "@loopback/rest": "^1.10.4",
     "@loopback/rest-explorer": "^1.1.18",
-    "@loopback/service-proxy": "^1.1.6"
+    "@loopback/service-proxy": "^1.1.6",
+    "loopback-connector-mysql": "^5.3.1"
   },
   "devDependencies": {
     "@loopback/build": "^1.5.0",
