--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,7 +2,10 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "@loopback/build/config/tsconfig.common.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "target": "ES6",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src"]
 }
