--- a/example/package.json
+++ b/example/package.json
@@ -55,7 +55,8 @@
     "@loopback/rest": "^1.10.4",
     "@loopback/rest-explorer": "^1.1.18",
     "@loopback/service-proxy": "^1.1.6",
-    "loopback-connector-mysql": "^5.3.1"
+    "loopback-connector-mysql": "^5.3.1",
+    "loopback4-spring": "^1.0.1"
   },
   "devDependencies": {
     "@loopback/build": "^1.5.0",
