--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -1,14 +1,22 @@
 version: '3'
 
 services:
-#  mysql:
-#    image: 'mysql:8.0'
-#    command: --default-authentication-plugin=mysql_native_password
-#    ports:
-#      - '3306:3306'
-#    environment:
-#      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-#      - MYSQL_DATABASE=example
+  mysql:
+    image: 'mysql:8.0'
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - '3306:3306'
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - MYSQL_DATABASE=example
+  postgres:
+    image: postgres
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_PASSWORD: example
+#  Add following line in /etc/hosts
+#  127.0.0.1 mongodb-primary mongodb-secondary
   mongodb-primary:
     image: 'bitnami/mongodb:4.1'
     ports:
